Fix scholarship auto-updater + enhance blog post formatting
- Fixed script to target components/ScholarshipDatabase.tsx (was looking in wrong file)
- Fixed variable name from scholarshipData to scholarships
- Enhanced both auto-generated blog posts with rich formatting:
  * Added blockquotes for key insights
  * More bold text on important terms and numbers
  * Changed ### to ## for main sections
  * Added numbered lists for actionable steps
  * Added emojis and visual breaks
  * Better structure with subsections
- Gemini API resets daily at midnight PT (1,500 requests/day limit)

--- a/app/blog/2025-12-09-beyond-the-buzzwords-your-2025-blueprint-for-architecting-an-unstoppable-career.mdx
+++ b/app/blog/2025-12-09-beyond-the-buzzwords-your-2025-blueprint-for-architecting-an-unstoppable-career.mdx
@@ -51,97 +51,238 @@ This clarity transforms your job hunt from a **generic search** into a **targete
 
 ---
 
-### 2. Deconstruct the Beast (Modular Thinking)
+## 2. Deconstruct the Beast (Modular Thinking)
 
-**The Core Idea:** Big, audacious goals are overwhelming. System designers know you don't build a complex system all at once; you break it down into smaller, manageable, interdependent modules. Your career is no different.
+> **The Core Idea:** Big, audacious goals are overwhelming. System designers know you don't build a complex system all at once; you break it down into smaller, manageable, interdependent modules.
 
-**Why It Matters:** Fear of the unknown or the sheer scale of a goal often leads to paralysis. By breaking it down, you create a clear roadmap, build momentum with small wins, and make complex challenges feel achievable.
+Your career is **no different**.
 
-**Real-World Example:** Learning a new programming language isn't one giant task; it's a series of modules: "master syntax (Module 1)," "build a small personal project (Module 2)," "contribute to open source (Module 3)." Or, "getting promoted" isn't a single leap; it's modular: "improve public speaking skills (Module A)," "take on a leadership opportunity (Module B)," "upskill in a critical area (Module C)."
+### Why It Matters
 
-**Actionable Steps:**
-*   **Mind Map Your Goals:** For any big goal (e.g., "Land my dream internship," "Launch my side hustle"), draw a mind map. Break it into 3-5 major 'modules.' Then, break each module into 3-5 smaller, actionable 'tasks.'
-*   **Use Project Management Tools:** Tools like Trello, Notion, or even just sticky notes can help you visualize and track your progress through these modules.
-*   **Set Micro-Goals:** Focus on completing one small task from one module each day or week. The cumulative effect is powerful.
+Fear of the unknown or the sheer scale of a goal often leads to **paralysis**. By breaking it down, you:
 
----
+* Create a clear **roadmap**
+* Build momentum with **small wins**
+* Make complex challenges feel **achievable**
 
-### 3. Future-Proof Your Core (Scalability & Resilience)
+### Real-World Example
 
-**The Core Idea:** A well-designed system isn't just functional today; it can scale to handle future load and recover from failures. For your career, this means building skills and choosing paths that are resilient, adaptable, and relevant for the long haul, not just the immediate buzz.
+Learning a new programming language isn't one giant task; it's a series of modules:
 
-**Why It Matters:** The job market in 2025 is dynamic. What's hot today might be obsolete tomorrow. Investing in foundational, transferable skills and sustainable habits ensures you're ready for whatever comes next, preventing burnout and career stagnation.
+1. **Master syntax** (Module 1)
+2. **Build a small personal project** (Module 2)
+3. **Contribute to open source** (Module 3)
 
-**Real-World Example:** Choosing a degree or skill: is it just for immediate job prospects, or does it build foundational thinking and problem-solving skills that can evolve? Picking a side hustle: does it burn you out for quick cash, or does it energize you while building valuable, marketable expertise? Building strong communication and critical thinking skills will always be valuable, regardless of specific tech trends.
+Or, "getting promoted" isn't a single leap; it's modular:
 
-**Actionable Steps:**
-*   **Research Industry Trends:** Look beyond the headlines. What are the macro-trends in your desired field? What skills are consistently in demand, not just the flavor of the month?
-*   **Talk to Mentors:** Connect with professionals who are 5-10 years ahead of you. Ask them what skills they wish they'd focused on earlier, and what they predict will be crucial in the coming years.
-*   **Prioritize Foundational Learning:** Instead of chasing every new framework, solidify your understanding of data structures, algorithms, design principles, or strong communication. These are the bedrock of any robust career.
+* **Module A:** Improve public speaking skills
+* **Module B:** Take on a leadership opportunity
+* **Module C:** Upskill in a critical area
 
----
+### Actionable Steps
 
-### 4. The Art of the Trade-off (Prioritize Your Power-Ups)
+1. **Mind Map Your Goals:** For any big goal (e.g., "Land my dream internship," "Launch my side hustle"), draw a mind map. Break it into **3-5 major 'modules'**. Then, break each module into 3-5 smaller, actionable 'tasks.'
 
-**The Core Idea:** No system can do everything perfectly. Designers constantly make trade-offs between performance, cost, complexity, and user experience. Similarly, your time, energy, and resources are finite. Every 'yes' is a 'no' to something else.
+2. **Use Project Management Tools:** Tools like **Trello**, **Notion**, or even just sticky notes can help you visualize and track your progress through these modules.
 
-**Why It Matters:** Trying to do everything leads to mediocrity in all areas. Understanding how to prioritize and make informed trade-offs ensures you're allocating your most precious resources to the things that truly move the needle for your North Star.
-
-**Real-World Example:** Should you spend an extra week perfecting a minor feature on your portfolio project, or launch a solid MVP to get feedback and move on to the next project? Both are good, but which moves you closer to your *current* objective (e.g., getting an interview vs. learning a new skill)? Prioritizing sleep and mental health over an all-nighter for a non-critical deadline is a critical trade-off for long-term sustainability.
-
-**Actionable Steps:**
-*   **Map Against Your North Star:** When faced with multiple opportunities or tasks, map them against your 'North Star' (Principle 1). Which one has the highest impact on your long-term goals?
-*   **The 2x2 Matrix:** Use a simple matrix (e.g., High Impact/Low Effort, High Impact/High Effort, Low Impact/Low Effort, Low Impact/High Effort) to visualize and prioritize your tasks and opportunities.
-*   **Practice Saying 'No':** Politely decline commitments that don't align with your priorities or stretch you too thin. Your 'no' to others is a 'yes' to your own focus.
+3. **Set Micro-Goals:** Focus on completing **one small task** from one module each day or week. The cumulative effect is powerful.
 
 ---
 
-### 5. Communicate Your API (Speak the Language of Solutions)
+## 3. Future-Proof Your Core (Scalability & Resilience)
 
-**The Core Idea:** A brilliant system is useless if no one understands how to use it or why it exists. Your ideas, projects, and skills are like APIs – they need clear documentation and effective endpoints for others to 'consume' them. Can you explain complex concepts simply? Can you articulate *why* you made a decision?
+> **The Core Idea:** A well-designed system isn't just functional today; it can **scale** to handle future load and **recover** from failures.
 
-**Why It Matters:** In 2025, technical prowess isn't enough. Your ability to communicate your thought process, justify your decisions, and persuade others is paramount in interviews, team collaborations, and leadership roles. It makes you an invaluable team member.
+For your career, this means building skills and choosing paths that are **resilient**, **adaptable**, and relevant for the long haul, not just the immediate buzz.
 
-**Real-World Example:** In an interview, don't just state the answer to a coding problem; walk them through your thought process, your assumptions, and any trade-offs you considered. In a team meeting, explain the benefits of your proposed solution (e.g., "This approach will save us 10 hours a week and improve user satisfaction by X%"), not just the solution itself.
+### Why It Matters
 
-**Actionable Steps:**
-*   **Practice Explaining:** Regularly practice explaining your side projects, academic work, or complex concepts to non-technical friends or family. If they get it, you're on the right track.
-*   **Mock Interviews:** Participate in mock interviews with peers or mentors, specifically focusing on articulating your problem-solving process and decision-making.
-*   **Document Your Work:** Even for personal projects, write a short README or project brief explaining its purpose, features, and the challenges you overcame.
+The job market in **2025** is dynamic. What's hot today might be obsolete tomorrow. 
 
----
+Investing in **foundational, transferable skills** and sustainable habits ensures you're ready for whatever comes next, preventing burnout and career stagnation.
 
-### 6. Debugging & Iteration (Embrace the Beta Phase)
+### Real-World Example
 
-**The Core Idea:** No system is perfect on day one. Expect bugs, expect rejections, expect things to break. Great system designers view 'failures' as data points for improvement. It's not about avoiding mistakes, but about learning and iterating quickly.
+**Choosing a degree or skill:** Is it just for immediate job prospects, or does it build foundational thinking and problem-solving skills that can evolve?
 
-**Why It Matters:** The fastest way to grow is to learn from your experiences, both good and bad. In a rapidly changing world, the ability to adapt, pivot, and continuously improve is a superpower. Every 'failure' is just a beta test for your next, better version.
+**Picking a side hustle:** Does it burn you out for quick cash, or does it energize you while building valuable, marketable expertise?
 
-**Real-World Example:** Didn't get that internship? Instead of dwelling, ask for feedback (if possible). A project didn't go as planned? Conduct a personal 'post-mortem': What worked? What didn't? What's one thing you'll change next time? Treat every setback as a new data point for improvement, not a final judgment.
+> **Pro Tip:** Building strong **communication** and **critical thinking** skills will always be valuable, regardless of specific tech trends.
 
-**Actionable Steps:**
-*   **Scheduled Review:** After every significant project, interview, or even a period of intense learning, schedule a short 'post-mortem' for yourself. What was the goal? What were the results? What did you learn?
-*   **Seek Constructive Criticism:** Actively ask for feedback from peers, mentors, and supervisors. Be open to hearing what you can improve, even if it's uncomfortable.
-*   **Build a 'Lesson Log':** Keep a running list of challenges you faced and the lessons you learned. Revisit it periodically to see your growth.
+### Actionable Steps
 
----
+1. **Research Industry Trends:** Look beyond the headlines. What are the **macro-trends** in your desired field? What skills are consistently in demand, not just the flavor of the month?
 
-### 7. Build Your Core Framework (Master the Fundamentals)
+2. **Talk to Mentors:** Connect with professionals who are **5-10 years ahead** of you. Ask them what skills they wish they'd focused on earlier, and what they predict will be crucial in the coming years.
 
-**The Core Idea:** Before you build advanced features or complex integrations, you need a rock-solid core framework. For your career, this means mastering the foundational skills that underpin your field, rather than just chasing the latest trends.
-
-**Why It Matters:** Trends come and go, but strong fundamentals provide a stable base for any future innovation. Whether it's critical thinking, communication, specific technical skills like data structures and algorithms, or design principles – these are your universal tools that will never go out of style and will enable you to pick up new tools faster.
-
-**Real-World Example:** Instead of just learning the hottest new JavaScript framework, solidify your understanding of JavaScript fundamentals, object-oriented programming, and web architecture. If you're in design, master typography, color theory, and user psychology before diving into the latest UI tool. These core skills make you adaptable and highly valuable.
-
-**Actionable Steps:**
-*   **Dedicated Learning Blocks:** Allocate specific time each week to truly understand foundational concepts in your field, not just surface-level knowledge.
-*   **Consistent Practice:** Whether it's daily coding challenges, analytical problem-solving exercises, or actively seeking opportunities to hone your writing and presentation skills.
-*   **Seek Mentorship for Fundamentals:** Find someone experienced who can guide you on the most critical foundational skills to develop for your desired career path.
+3. **Prioritize Foundational Learning:** Instead of chasing every new framework, solidify your understanding of **data structures**, **algorithms**, **design principles**, or **strong communication**. These are the bedrock of any robust career.
 
 ---
 
-The future isn't something that happens *to* you; it's something you *design*. By adopting these system design principles for your career, you're not just preparing for interviews or your next big project; you're building a resilient, adaptable, and genuinely unstoppable path for yourself, well into 2025 and beyond. So, grab your virtual blueprint, sharpen your tools, and start architecting the career you truly want.
+## 4. The Art of the Trade-off (Prioritize Your Power-Ups)
+
+> **The Core Idea:** No system can do everything perfectly. Designers constantly make trade-offs between performance, cost, complexity, and user experience.
+
+Similarly, your time, energy, and resources are **finite**. Every 'yes' is a 'no' to something else.
+
+### Why It Matters
+
+Trying to do everything leads to **mediocrity** in all areas. Understanding how to prioritize and make informed trade-offs ensures you're allocating your most precious resources to the things that truly **move the needle** for your North Star.
+
+### Real-World Example
+
+Should you spend an extra week perfecting a minor feature on your portfolio project, or **launch a solid MVP** to get feedback and move on to the next project? 
+
+Both are good, but which moves you closer to your *current* objective?
+
+* Getting an interview? → **Ship the MVP**
+* Learning a new skill? → **Perfect the feature**
+
+> **Critical Trade-off:** Prioritizing **sleep and mental health** over an all-nighter for a non-critical deadline is essential for long-term sustainability.
+
+### Actionable Steps
+
+1. **Map Against Your North Star:** When faced with multiple opportunities or tasks, map them against your 'North Star' (Principle 1). Which one has the **highest impact** on your long-term goals?
+
+2. **The 2x2 Matrix:** Use a simple matrix to visualize and prioritize:
+   * High Impact/Low Effort ⭐ *(Do first)*
+   * High Impact/High Effort 💪 *(Schedule properly)*
+   * Low Impact/Low Effort 🔧 *(Quick wins)*
+   * Low Impact/High Effort ❌ *(Avoid)*
+
+3. **Practice Saying 'No':** Politely decline commitments that don't align with your priorities or stretch you too thin. Your **'no'** to others is a **'yes'** to your own focus.
+
+---
+
+## 5. Communicate Your API (Speak the Language of Solutions)
+
+> **The Core Idea:** A brilliant system is useless if no one understands how to use it or why it exists.
+
+Your ideas, projects, and skills are like **APIs** – they need clear documentation and effective endpoints for others to 'consume' them. 
+
+**Can you explain complex concepts simply? Can you articulate *why* you made a decision?**
+
+### Why It Matters
+
+In **2025**, technical prowess isn't enough. Your ability to:
+
+* **Communicate** your thought process
+* **Justify** your decisions
+* **Persuade** others
+
+...is **paramount** in interviews, team collaborations, and leadership roles. It makes you an invaluable team member.
+
+### Real-World Example
+
+**In an interview:** Don't just state the answer to a coding problem; walk them through your:
+* Thought process
+* Assumptions
+* Trade-offs you considered
+
+**In a team meeting:** Explain the **benefits** of your proposed solution:
+
+> *"This approach will save us **10 hours a week** and improve user satisfaction by **X%**"*
+
+...not just the solution itself.
+
+### Actionable Steps
+
+1. **Practice Explaining:** Regularly practice explaining your side projects, academic work, or complex concepts to **non-technical friends or family**. If they get it, you're on the right track.
+
+2. **Mock Interviews:** Participate in mock interviews with peers or mentors, specifically focusing on **articulating your problem-solving process** and decision-making.
+
+3. **Document Your Work:** Even for personal projects, write a short README or project brief explaining its purpose, features, and the **challenges you overcame**.
+
+---
+
+## 6. Debugging & Iteration (Embrace the Beta Phase)
+
+> **The Core Idea:** No system is perfect on day one. Expect bugs, expect rejections, expect things to break.
+
+Great system designers view **'failures' as data points** for improvement. It's not about avoiding mistakes, but about **learning and iterating quickly**.
+
+### Why It Matters
+
+The fastest way to grow is to learn from your experiences, both good and bad. In a rapidly changing world, the ability to:
+
+* **Adapt**
+* **Pivot**
+* **Continuously improve**
+
+...is a **superpower**.
+
+> **Remember:** Every 'failure' is just a **beta test** for your next, better version.
+
+### Real-World Example
+
+**Didn't get that internship?** Instead of dwelling, ask for feedback (if possible).
+
+**A project didn't go as planned?** Conduct a personal 'post-mortem':
+
+1. What worked? ✅
+2. What didn't? ❌
+3. What's one thing you'll change next time? 🔄
+
+Treat every setback as a **new data point** for improvement, not a final judgment.
+
+### Actionable Steps
+
+1. **Scheduled Review:** After every significant project, interview, or even a period of intense learning, schedule a short 'post-mortem' for yourself. What was the goal? What were the results? What did you learn?
+
+2. **Seek Constructive Criticism:** Actively ask for feedback from peers, mentors, and supervisors. Be open to hearing what you can improve, even if it's uncomfortable.
+
+3. **Build a 'Lesson Log':** Keep a running list of challenges you faced and the lessons you learned. Revisit it periodically to see your **growth**.
+
+---
+
+## 7. Build Your Core Framework (Master the Fundamentals)
+
+> **The Core Idea:** Before you build advanced features or complex integrations, you need a **rock-solid core framework**.
+
+For your career, this means mastering the **foundational skills** that underpin your field, rather than just chasing the latest trends.
+
+### Why It Matters
+
+Trends come and go, but **strong fundamentals** provide a stable base for any future innovation. 
+
+Whether it's:
+* **Critical thinking**
+* **Communication**
+* **Technical skills** (data structures, algorithms)
+* **Design principles**
+
+...these are your **universal tools** that will never go out of style and will enable you to pick up new tools faster.
+
+### Real-World Example
+
+**Instead of** just learning the hottest new JavaScript framework...
+
+**Solidify** your understanding of:
+* JavaScript fundamentals
+* Object-oriented programming
+* Web architecture
+
+**If you're in design:** Master typography, color theory, and user psychology **before** diving into the latest UI tool. 
+
+These core skills make you **adaptable** and **highly valuable**.
+
+### Actionable Steps
+
+1. **Dedicated Learning Blocks:** Allocate specific time each week to truly understand foundational concepts in your field, not just surface-level knowledge.
+
+2. **Consistent Practice:** Whether it's daily coding challenges, analytical problem-solving exercises, or actively seeking opportunities to hone your **writing and presentation skills**.
+
+3. **Seek Mentorship for Fundamentals:** Find someone experienced who can guide you on the most critical foundational skills to develop for your desired career path.
+
+---
+
+## Your Blueprint Awaits
+
+The future isn't something that happens *to* you; it's something you ***design***. 
+
+By adopting these system design principles for your career, you're not just preparing for interviews or your next big project; you're building a **resilient**, **adaptable**, and genuinely **unstoppable** path for yourself, well into 2025 and beyond. 
+
+> **So, grab your virtual blueprint, sharpen your tools, and start architecting the career you truly want.**
 
 
 ## Key Takeaways
